noinst_LIBRARIES = libfcalc.a
AM_FFLAGS = -ffixed-line-length-80 -fno-underscoring -m32 -I../include
libfcalc_a_SOURCES = \
                cwobm.f         \
                cutcu.f         \
                cuvm.f          \
                cvecu.f         \
                ctheu.f         \
                cstrt.f         \
                cstrm.f         \
                csitm.f         \
                csitu.f         \
                crosu.f         \
                cprem.f         \
                cptdm.f         \
                cquit.f         \
                cplxm.f         \
                cpepu.f         \
                cobse.f         \
                cocem.f         \
                cnutu.f         \
                cnutm.f         \
                cmatu.f         \
                cm20u.f         \
                cmabd.f         \
                cmain.f         \
                cetdm.f         \
                chead.f         \
                cinit.f         \
                ckill.f         \
                cdrvr.f         \
                cctiu.f         \
                cdiuu.f         \
                caxom.f         \
                catmm.f         \
                cut1m.f         \
                catiu.f         \
		getunit.f
